--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="7VRRteBfFqBVP5emN_Yo5MYBgo7u2TtBgWQT_yfC9D0" />
   <title>Vianaplay</title>
   <link rel="stylesheet" href="style.css" />
 </head>
