tambahan meta pencarian google

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vianaplay</title>
   <meta name="google-site-verification" content="7VRRteBfFqBVP5emN_Yo5MYBgo7u2TtBgWQT_yfC9D0" />
+  <meta name="description" content="Dengarkan musik favoritmu dengan VianaPlay, web player modern dengan playlist, visualizer, dan video background.">
+<meta name="keywords" content="musik, player, audio, visualizer, spotify style, vianaplay, web music">
+<meta name="author" content="Novian Trijuwandi">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
