--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 
       <div class="controls">
         <button onclick="prevSong()">⏮️</button>
-        <button onclick="togglePlay()">▶️ / ⏸️</button>
+        <button onclick="togglePlay()">▶️</button>
         <button onclick="nextSong()">⏭️</button>
+        <button onclick="toggleShuffle()">🔀</button>
+        <button onclick="toggleRepeat()">🔁</button>
+
+        <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
+        <div class="time">
+        <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
+        </div>
+        <input type="range" id="progress" value="0" min="0" step="1">
       </div>
 
       <ul id="playlist"></ul>
