--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <button onclick="nextSong()">⏭️</button>
         <button onclick="toggleShuffle()">🔀</button>
         <button onclick="toggleRepeat()">🔁</button>
-
+        <div class="volume-control">
+        <span id="volume-icon">🔊</span>
         <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
+        </div>
         <div class="time">
         <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
         </div>
